@@ -1,0 +1,27 @@
+--  Copyright 2008 Free Software Foundation, Inc.
+--
+--  This program is free software; you can redistribute it and/or modify
+--  it under the terms of the GNU General Public License as published by
+--  the Free Software Foundation; either version 3 of the License, or
+--  (at your option) any later version.
+--
+--  This program is distributed in the hope that it will be useful,
+--  but WITHOUT ANY WARRANTY; without even the implied warranty of
+--  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+--  GNU General Public License for more details.
+--
+--  You should have received a copy of the GNU General Public License
+--  along with this program.  If not, see <http://www.gnu.org/licenses/>.
+
+procedure Bar is
+   type Index is (Zero, One, Two);
+   type Vector is array (Index) of Integer;
+   type IVector is array (Integer range 2 .. 5) of Integer;
+
+   Table : Vector := (0, 1, 2);
+   ITable : IVector := (2, 3, 4, 5);
+begin
+   Table (Zero) := 5;  --  START
+   ITable (3) := 10;
+end Bar;
+
