@@ -1,5 +1,10 @@
 2008-01-03  Joel Brobecker  <brobecker@adacore.com>
 
+	* gdb.ada/array_bounds/bar.adb: New file.
+	* gdb.ada/array_bounds.exp: New testcase.
+
+2008-01-03  Joel Brobecker  <brobecker@adacore.com>
+
 	* gdb.ada/arrayptr/pck.ads, gdb.ada/arrayptr/pck.adb,
 	gdb.ada/arrayptr/foo.adb: New files.
 	* gdb.ada/arrayptr.exp: New testcase.
